@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3409 2019/08/13 02:21:44 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3410 2019/08/13 02:25:05 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5617,3 +5617,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added graphics/tex-chemfig-doc version 1.41 [brook 2019-08-13]
 	Added print/tex-beamerposter version 1.13 [brook 2019-08-13]
 	Added print/tex-beamerposter-doc version 1.13 [brook 2019-08-13]
+	Added print/tex-nfssext-cfr version 2019 [brook 2019-08-13]
